syntax = "proto3";

package heimdallr.v1;

// ModChannel
message GetModChannelRequest {
  string guild_id = 1;
}

message UpdateModChannelRequest {
  ModChannelSettings settings = 1;
}

message ModChannelSettings {
  string guild_id = 1;
  string moderator_channel = 2;
}

// InfractionSettings
message GetInfractionSettingsRequest {
  string guild_id = 1;
}

message UpdateInfractionSettingsRequest {
  InfractionSettings settings = 1;
}

message InfractionSettings {
  string guild_id = 1;
  double half_life_days = 2;
  bool notify_on_warned_user_join = 3;
  double notify_warn_severity_threshold = 4;
}

// GatekeepSettings
message GetGatekeepSettingsRequest {
  string guild_id = 1;
}

message UpdateGatekeepSettingsRequest {
  GatekeepSettings settings = 1;
}

message GatekeepSettings {
  string guild_id = 1;
  bool enabled = 2;
  string pending_role = 3;
  string approved_role = 4;
  bool add_pending_role_on_join = 5;
  string approved_message = 6;
  bool approved_message_v2 = 7;
  string approved_message_v2_json = 8;
}

// JoinLeaveSettings
message GetJoinLeaveSettingsRequest {
  string guild_id = 1;
}

message UpdateJoinLeaveSettingsRequest {
  JoinLeaveSettings settings = 1;
}

message JoinLeaveSettings {
  string guild_id = 1;
  bool join_message_enabled = 2;
  string join_message = 3;
  bool leave_message_enabled = 4;
  string leave_message = 5;
  string channel = 6;
  bool join_message_v2 = 7;
  string join_message_v2_json = 8;
  bool leave_message_v2 = 9;
  string leave_message_v2_json = 10;
}

// AntiSpamSettings
message GetAntiSpamSettingsRequest {
  string guild_id = 1;
}

message UpdateAntiSpamSettingsRequest {
  AntiSpamSettings settings = 1;
}

message AntiSpamSettings {
  string guild_id = 1;
  bool enabled = 2;
  int32 count = 3;
  int32 cooldown_seconds = 4;
}

// BanFooterSettings
message GetBanFooterSettingsRequest {
  string guild_id = 1;
}

message UpdateBanFooterSettingsRequest {
  BanFooterSettings settings = 1;
}

message BanFooterSettings {
  string guild_id = 1;
  string footer = 2;
  bool always_send = 3;
}

// ModmailSettings
message GetModmailSettingsRequest {
  string guild_id = 1;
}

message UpdateModmailSettingsRequest {
  ModmailSettings settings = 1;
}

message ModmailSettings {
  string guild_id = 1;
  string report_threads_channel = 2;
  string report_notification_channel = 3;
  string report_ping_role = 4;
}

// PaceControl
message PaceControlChannel {
  string guild_id = 1;
  string channel_id = 2;
  bool enabled = 3;
  int32 target_wpm = 4;
  int32 min_slowmode = 5;
  int32 max_slowmode = 6;
  int32 activation_wpm = 7;
  int32 wpm_window_seconds = 8;
  int32 user_window_seconds = 9;
}

message GetPaceControlRequest {
  string guild_id = 1;
}

message GetPaceControlResponse {
  repeated PaceControlChannel channels = 1;
}

message UpdatePaceControlRequest {
  PaceControlChannel channel = 1;
}

message DeletePaceControlRequest {
  string guild_id = 1;
  string channel_id = 2;
}

// Guild data (channels & roles)
message Channel {
  string id = 1;
  string name = 2;
  int32 type = 3;
  int32 position = 4;
  string parent_id = 5;
}

message Role {
  string id = 1;
  string name = 2;
  int32 color = 3;
  int32 position = 4;
  bool managed = 5;
}

message ListChannelsRequest {
  string guild_id = 1;
}

message ListChannelsResponse {
  repeated Channel channels = 1;
}

message ListRolesRequest {
  string guild_id = 1;
}

message ListRolesResponse {
  repeated Role roles = 1;
}

// SendComponentsMessage
message SendComponentsMessageRequest {
  string guild_id = 1;
  string channel_id = 2;
  string components_json = 3; // JSON array of discord LayoutComponents
}

message SendComponentsMessageResponse {
  string message_id = 1;
}

// Template placeholders
message TemplatePlaceholder {
  string placeholder = 1;
  string description = 2;
}

message GetTemplatePlaceholdersRequest {}

message GetTemplatePlaceholdersResponse {
  repeated TemplatePlaceholder placeholders = 1;
}

service GuildSettingsService {
  rpc GetModChannel(GetModChannelRequest) returns (ModChannelSettings);
  rpc UpdateModChannel(UpdateModChannelRequest) returns (ModChannelSettings);

  rpc GetInfractionSettings(GetInfractionSettingsRequest) returns (InfractionSettings);
  rpc UpdateInfractionSettings(UpdateInfractionSettingsRequest) returns (InfractionSettings);

  rpc GetGatekeepSettings(GetGatekeepSettingsRequest) returns (GatekeepSettings);
  rpc UpdateGatekeepSettings(UpdateGatekeepSettingsRequest) returns (GatekeepSettings);

  rpc GetJoinLeaveSettings(GetJoinLeaveSettingsRequest) returns (JoinLeaveSettings);
  rpc UpdateJoinLeaveSettings(UpdateJoinLeaveSettingsRequest) returns (JoinLeaveSettings);

  rpc GetAntiSpamSettings(GetAntiSpamSettingsRequest) returns (AntiSpamSettings);
  rpc UpdateAntiSpamSettings(UpdateAntiSpamSettingsRequest) returns (AntiSpamSettings);

  rpc GetBanFooterSettings(GetBanFooterSettingsRequest) returns (BanFooterSettings);
  rpc UpdateBanFooterSettings(UpdateBanFooterSettingsRequest) returns (BanFooterSettings);

  rpc GetModmailSettings(GetModmailSettingsRequest) returns (ModmailSettings);
  rpc UpdateModmailSettings(UpdateModmailSettingsRequest) returns (ModmailSettings);

  rpc ListChannels(ListChannelsRequest) returns (ListChannelsResponse);
  rpc ListRoles(ListRolesRequest) returns (ListRolesResponse);

  rpc GetTemplatePlaceholders(GetTemplatePlaceholdersRequest) returns (GetTemplatePlaceholdersResponse);

  rpc SendComponentsMessage(SendComponentsMessageRequest) returns (SendComponentsMessageResponse);

  rpc GetPaceControl(GetPaceControlRequest) returns (GetPaceControlResponse);
  rpc UpdatePaceControl(UpdatePaceControlRequest) returns (PaceControlChannel);
  rpc DeletePaceControl(DeletePaceControlRequest) returns (PaceControlChannel);
}
